fix broken syles, gaps, cut offs, margins etc.

--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -2,6 +2,8 @@
     background: black;
     font-family: "Jost", sans-serif;
     padding-top: 3%;
+    padding-left: 5%;
+    margin-left: -5%;
 }
 
 .footer-banner {
